# app-manager

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.ps1  build.rs
src/: actions.rs  collector.rs  installed_apps.rs  main.rs  models.rs  prefetch.rs  process.rs  processes.rs  registry.rs  services.rs  startup_folders.rs  status.rs  task_scheduler.rs  version_info.rs
src/gui/: dialogs.rs  installed_table.rs  mod.rs  process_table.rs  table.rs
wix/: License.rtf  main.wxs
