[package]
name = "app-manager"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A native Windows GUI tool for inspecting and managing installed applications, startup applications, processes, and services."
authors = ["Matt Smith"]

[package.metadata.wix]
upgrade-guid = "9A54B683-4C68-441E-8F7C-7F06FC436FE6"
path-guid = "7E74CAC3-6A56-426F-ADEC-874385152DB9"

[build-dependencies]
winresource = "=0.1.30"

[dependencies]
winreg = "=0.55.0"
sysinfo = "=0.37.2"
chrono = "=0.4.43"
eframe = "=0.33.3"
egui_extras = "=0.33.3"
rfd = "=0.15.2"
lnk = "=0.5.1"
anyhow = "=1.0.101"
thiserror = "=2.0.18"

[dependencies.windows]
version = "=0.61.3"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_TaskScheduler",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
